--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+.DS_Store
 # Distribution / packaging
 .Python
 env/
@@ -48,7 +48,12 @@ coverage.xml
 # Django stuff:
 *.log
 *.pot
+/staticfiles
+settings.py
+settings_prod.py
+db.sqlite3
 
 # Sphinx documentation
 docs/_build/
+
 
